...
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#795548"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4" />

    <Button
        android:id="@+id/sign_up_button_login"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/cardview_dark_background"
...
