...
    <item
        android:id="@+id/navigation_recetas"
        android:icon="@drawable/ic_recetas_black_48dp"
        android:title="@string/title_recetas" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_perfil_black_48dp"
        android:title="@string/title_perfil" />

</menu>
